# ocelle-py

./: .editorconfig  .env.test.example  .gitignore  CHANGELOG.md  DEV.MD  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: on-rc-tag.yml  publish-release.yml  tests-ci.yml
docs/: FORK_BRANDING.md  PROVIDERS.md  SOLUTION_SUMMARY.md  VENDORING_SOP.md  VSCODE_SETUP.md
fortifyroot/: __init__.py  config.yaml  safety.py  sdk.py  tests.py  validators.py
scripts/: README.md  extract_otel_deps.py  test_imports.py  vendor.sh  vendor_openllmetry.py
src/fortifyroot/: OPENLLMETRY_VERSION  __init__.py  config.yaml  core.py  decorators.py  instruments.py  safety.py  sdk.py  version.py
src/fortifyroot/_internal/: __init__.py  constants.py  env_mapping.py  synthetic_logs.py
src/fortifyroot/_internal/safety/: __init__.py  engine.py  models.py  parser.py  runtime.py  streaming.py
src/fortifyroot/_vendor/: VENDOR_DEPENDENCIES.json  VENDOR_MANIFEST.json  __init__.py
src/fortifyroot/_vendor/opentelemetry/: __init__.py
src/fortifyroot/ocelle/: __init__.py
src/fortifyroot/processors/: __init__.py  attribute_renamer.py
src/ocelle/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_attribute_renaming.py  test_config_poll_lifecycle.py  test_decorators.py  test_env_mapping.py  test_error_paths.py  test_fortifyroot_branding.py  test_init.py  test_logging_wrapper.py  test_metrics_guardrails.py  test_metrics_temporality.py  test_ocelle_imports.py  test_safety_engine.py  test_safety_runtime.py  test_safety_streaming.py  test_sdk.py  test_sdk_pipeline_e2e.py  test_streaming_safety_e2e.py  test_vendored_auth_warnings.py  test_vendored_imports.py
tests/openai/: README.md  __init__.py  test_instrumentation.py  test_vcr.py
tests/openai/cassettes/: test_chat_completion_non_streaming.yaml  test_chat_completion_streaming.yaml  test_chat_completion_with_vision.yaml
tests/providers/: conftest.py  safety_handlers.py
tests/providers/anthropic/: conftest.py  test_safety_cassettes.py
tests/providers/anthropic/cassettes/: test_anthropic_safety_async_completion_mask_email.yaml  test_anthropic_safety_async_prompt_mask_email.yaml  test_anthropic_safety_no_config_passthrough.yaml  test_anthropic_safety_stream_completion_mask.yaml  test_anthropic_safety_stream_prompt_mask_email.yaml  test_anthropic_safety_sync_completion_mask_email.yaml  test_anthropic_safety_sync_prompt_allow_credit_card.yaml  test_anthropic_safety_sync_prompt_allow_email.yaml  test_anthropic_safety_sync_prompt_mask_combined.yaml  test_anthropic_safety_sync_prompt_mask_credit_card.yaml  test_anthropic_safety_sync_prompt_mask_email.yaml  test_anthropic_safety_sync_prompt_mask_list_rule.yaml  test_anthropic_safety_vision_skips_image.yaml
tests/providers/bedrock/: conftest.py  test_safety_cassettes.py
tests/providers/bedrock/cassettes/: test_bedrock_safety_no_config_passthrough.yaml  test_bedrock_safety_stream_completion_mask.yaml  test_bedrock_safety_stream_prompt_mask_email.yaml  test_bedrock_safety_sync_completion_mask_email.yaml  test_bedrock_safety_sync_prompt_allow_credit_card.yaml  test_bedrock_safety_sync_prompt_allow_email.yaml  test_bedrock_safety_sync_prompt_mask_combined.yaml  test_bedrock_safety_sync_prompt_mask_credit_card.yaml  test_bedrock_safety_sync_prompt_mask_email.yaml  test_bedrock_safety_sync_prompt_mask_list_rule.yaml  test_bedrock_safety_vision_skips_image.yaml
tests/providers/google_genai/: conftest.py  test_safety_cassettes.py
tests/providers/google_genai/cassettes/: test_google_genai_safety_async_completion_mask_email.yaml  test_google_genai_safety_async_prompt_mask_email.yaml  test_google_genai_safety_no_config_passthrough.yaml  test_google_genai_safety_stream_completion_mask.yaml  test_google_genai_safety_stream_prompt_mask_email.yaml  test_google_genai_safety_sync_completion_mask_email.yaml  test_google_genai_safety_sync_prompt_allow_credit_card.yaml  test_google_genai_safety_sync_prompt_allow_email.yaml  test_google_genai_safety_sync_prompt_mask_combined.yaml  test_google_genai_safety_sync_prompt_mask_credit_card.yaml  test_google_genai_safety_sync_prompt_mask_email.yaml  test_google_genai_safety_sync_prompt_mask_list_rule.yaml  test_google_genai_safety_vision_skips_image.yaml
tests/providers/langchain/: conftest.py  test_safety_cassettes.py
tests/providers/langchain/cassettes/: test_langchain_safety_agent_execution_mask.yaml  test_langchain_safety_async_completion_mask_email.yaml  test_langchain_safety_async_prompt_mask_email.yaml  test_langchain_safety_no_config_passthrough.yaml  test_langchain_safety_sync_completion_mask_email.yaml  test_langchain_safety_sync_prompt_allow_email.yaml  test_langchain_safety_sync_prompt_mask_credit_card.yaml  test_langchain_safety_sync_prompt_mask_email.yaml  test_langchain_safety_sync_prompt_mask_list_rule.yaml  test_langgraph_safety_workflow_mask.yaml
tests/providers/litellm/: conftest.py  test_safety_cassettes.py
tests/providers/litellm/cassettes/: test_litellm_completion_logger_fires.yaml  test_litellm_fortifyroot_attributes.yaml  test_litellm_safety_dual_span_hierarchy.yaml  test_litellm_safety_no_config_passthrough.yaml  test_litellm_safety_stream_completion_mask.yaml  test_litellm_safety_stream_prompt_mask_email.yaml  test_litellm_safety_sync_completion_mask_email.yaml  test_litellm_safety_sync_prompt_allow_credit_card.yaml  test_litellm_safety_sync_prompt_allow_email.yaml  test_litellm_safety_sync_prompt_mask_combined.yaml  test_litellm_safety_sync_prompt_mask_credit_card.yaml  test_litellm_safety_sync_prompt_mask_email.yaml  test_litellm_safety_sync_prompt_mask_list_rule.yaml  test_litellm_safety_sync_prompt_mask_udf_rule.yaml
tests/providers/llamaindex/: conftest.py  test_safety_cassettes.py
tests/providers/llamaindex/cassettes/: test_llamaindex_fortifyroot_attributes.yaml  test_llamaindex_safety_embeddings_no_safety.yaml  test_llamaindex_safety_no_config_passthrough.yaml  test_llamaindex_safety_stream_completion_mask.yaml  (+7 more)
tests/providers/openai/: conftest.py  test_safety_cassettes.py
(+287 files in other folders)
