[tool.poetry]
name = "fortifyroot-sdk"
version = "0.1.0"
description = "FortifyRoot SDK for LLM Observability"
authors = ["FortifyRoot <sdk@fortifyroot.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/fortifyroot/fortifyroot-sdk-py"
documentation = "https://docs.fortifyroot.com"
keywords = ["llm", "genai", "observability", "tracing", "opentelemetry", "langchain", "openai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
include = [
    { path = "README.md", format = "sdist" },
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
]
packages = [{ include = "fortifyroot", from = "src" }]

# =============================================================================
# PRODUCTION DEPENDENCIES
# =============================================================================
# These dependencies are merged from all vendored OpenLLMetry packages.
# When upgrading the vendored version, run: ./scripts/vendor.sh <path-to-fork>
# The vendor script writes VENDOR_DEPENDENCIES.json as a reference manifest
# but does NOT auto-update this file.  Manually reconcile after re-vendoring.
#
# IMPORTANT: We DO NOT vendor the core OpenTelemetry packages.
# We only vendor:
#   - traceloop-sdk
#   - opentelemetry-instrumentation-* (LLM provider instrumentations)
#   - opentelemetry-semantic-conventions-ai
#
# The core OpenTelemetry packages below come from PyPI and are NOT modified.
# =============================================================================

[tool.poetry.dependencies]
python = ">=3.10,<4"

# -------------------------------------------------------------------------
# Core OpenTelemetry (FROM PyPI - NOT vendored)
# -------------------------------------------------------------------------
opentelemetry-api = "^1.38.0"
opentelemetry-sdk = "^1.38.0"
opentelemetry-exporter-otlp-proto-http = "^1.38.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.38.0"

# -------------------------------------------------------------------------
# OpenTelemetry Instrumentation - Base (FROM PyPI - NOT vendored)
# -------------------------------------------------------------------------
opentelemetry-instrumentation = ">=0.59b0"
opentelemetry-semantic-conventions = ">=0.59b0"

# -------------------------------------------------------------------------
# OpenTelemetry Instrumentation - Standard Libraries (FROM PyPI - NOT vendored)
# These instrument standard Python libraries and are used by traceloop-sdk
# -------------------------------------------------------------------------
opentelemetry-instrumentation-logging = ">=0.59b0"
opentelemetry-instrumentation-requests = ">=0.59b0"
opentelemetry-instrumentation-sqlalchemy = ">=0.59b0"
opentelemetry-instrumentation-urllib3 = ">=0.59b0"
opentelemetry-instrumentation-threading = ">=0.59b0"
opentelemetry-instrumentation-redis = ">=0.59b0"

# -------------------------------------------------------------------------
# Runtime utilities (FROM PyPI - required by vendored packages)
# These are direct dependencies of traceloop-sdk and instrumentations
# -------------------------------------------------------------------------
colorama = "^0.4.6"
tenacity = ">=8.2.3,<10.0"
pydantic = ">=1,<3"
jinja2 = "^3.1.5"
deprecated = "^1.2.14"
aiohttp = "^3.11.11"
cuid = "^0.4"
wrapt = "^1.14.0"

# -------------------------------------------------------------------------
# Optional instrumented libraries (installed only via extras)
# e.g. pip install fortifyroot-sdk[openai]  or  fortifyroot-sdk[bedrock]
# NOT installed by default.  Each maps to a [tool.poetry.extras] group.
# Hard runtime deps of specific instrumentations (e.g. inflection for
# llamaindex, tokenizers for bedrock) are also declared here.
# -------------------------------------------------------------------------
pandas = {version = ">=1.0.0", optional = true}
agno = {version = ">=2.2.2", optional = true}
aleph-alpha-client = {version = ">=7.1.0,<8", optional = true, python = ">=3.10,<3.14"}
anthropic = {version = ">=0.25.2,<0.83.0", optional = true}
boto3 = {version = ">=1.34.120,<2", optional = true}
chromadb = {version = ">=0.5.23,<0.6.0", optional = true}
cohere = {version = ">=5.18.0,<6", optional = true}
crewai = {version = ">=0.80.0,<0.81.0", optional = true, python = ">=3.10,<=3.13"}
google-cloud-aiplatform = {version = ">=1.54.0,<2", optional = true}
google-genai = {version = ">=1.0.0,<2", optional = true}
groq = {version = ">=0.18.0", optional = true}
haystack-ai = {version = ">=2.0,<2.4", optional = true}
ibm-watson-machine-learning = {version = "==1.0.368", optional = true, python = ">=3.10,<3.13"}
inflection = {version = ">=0.5.1,<0.6.0", optional = true}
lancedb = {version = ">=0.26.0", optional = true}
langchain = {version = ">=0.2.5,<2.0.0", optional = true}
langchain-openai = {version = ">=0.1.15,<2.0.0", optional = true}
litellm = {version = ">=1.71.2,<2,!=1.82.7,!=1.82.8", optional = true}
llama-index = {version = ">=0.14.12,<0.15.0", optional = true}
marqo = {version = ">=3.5.1,<4", optional = true}
mcp = {version = ">=1.26.0,<2", optional = true}
mistralai = {version = ">=1.0.0,<2", optional = true}
ollama = {version = ">=0.4.7,<0.5.0", optional = true}
openai = {version = ">=1.31.1,<3", optional = true}
pinecone-client = {version = ">=5.0.0,<6", optional = true}
pymilvus = {version = ">=2.4.1,<3", optional = true}
qdrant-client = {version = ">=1.9.1,<1.12", optional = true}
replicate = {version = ">=0.23.1,<0.27.0", optional = true}
together = {version = ">=1.2.0,<2", optional = true}
tokenizers = {version = ">=0.13.0", optional = true}
voyageai = {version = ">=0.3.0", optional = true, python = ">=3.9,<3.14"}
weaviate-client = {version = ">=3.26,<4", optional = true}
writer-sdk = {version = ">=2.3.0,<3", optional = true}

# -------------------------------------------------------------------------
# ReDoS-safe regex engine for safety rule evaluation
# -------------------------------------------------------------------------
google-re2 = ">=1.1"

# =============================================================================
# DEVELOPMENT DEPENDENCIES
# =============================================================================

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.2.0"
flake8 = "7.0.0"
pytest = "^8.2.2"
pytest-sugar = "1.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.23.7"
mypy = "^1.18.2"
types-requests = "^2.31.0"
types-colorama = "^0.4.15"
black = ">=23.0.0"
isort = ">=5.12.0"
ruff = ">=0.1.0"

# =============================================================================
# TEST DEPENDENCIES
# =============================================================================

[tool.poetry.group.test.dependencies]
# Testing infrastructure
vcrpy = ">=7.0.0,<9"
pytest-recording = "^0.13.1"
pandas = ">=1.0.0"
# Instrumented libraries — all declared so tests run or fail, never silently skip.
# Versions aligned with VENDOR_DEPENDENCIES.json (sourced from fork pyproject.toml files).
agno = ">=2.2.2"
aleph-alpha-client = {version = ">=7.1.0,<8", python = ">=3.10,<3.14"}
anthropic = ">=0.25.2,<0.83.0"
boto3 = ">=1.34.120,<2"
chromadb = ">=0.5.23,<0.6.0"
cohere = ">=5.18.0,<6"
crewai = {version = ">=0.80.0,<0.81.0", python = ">=3.10,<=3.13"}
google-cloud-aiplatform = ">=1.54.0,<2"
google-genai = ">=1.0.0,<2"
groq = ">=0.18.0"
haystack-ai = ">=2.0,<2.4"
ibm-watson-machine-learning = {version = "==1.0.368", python = ">=3.10,<3.13"}
inflection = ">=0.5.1,<0.6.0"
lancedb = ">=0.26.0"
langchain = ">=0.2.5,<2.0.0"
langchain-core = ">=0.2.0"
langchain-openai = ">=0.1.15,<2.0.0"
litellm = ">=1.71.2,<2,!=1.82.7,!=1.82.8"
llama-index = ">=0.14.12,<0.15.0"
marqo = ">=3.5.1,<4"
mcp = ">=1.26.0,<2"
mistralai = ">=1.0.0,<2"
ollama = ">=0.4.7,<0.5.0"
openai = ">=1.31.1,<3"
pinecone-client = ">=5.0.0,<6"
pymilvus = ">=2.4.1,<3"
qdrant-client = ">=1.9.1,<1.12"
replicate = ">=0.23.1,<0.27.0"
together = ">=1.2.0,<2"
tokenizers = ">=0.13.0"
voyageai = {version = ">=0.3.0", python = ">=3.9,<3.14"}
weaviate-client = ">=3.26,<4"
writer-sdk = ">=2.3.0,<3"

# =============================================================================
# OPTIONAL EXTRAS
# =============================================================================

[tool.poetry.extras]
datasets = ["pandas"]
# Per-instrumentation extras — install via e.g. pip install fortifyroot-sdk[openai,anthropic]
agno = ["agno"]
alephalpha = ["aleph-alpha-client"]
anthropic = ["anthropic"]
bedrock = ["boto3", "anthropic", "tokenizers"]
chromadb = ["chromadb"]
cohere = ["cohere"]
crewai = ["crewai"]
google-generativeai = ["google-genai"]
groq = ["groq"]
haystack = ["haystack-ai"]
lancedb = ["lancedb"]
langchain = ["langchain", "langchain-openai"]
litellm = ["litellm"]
llamaindex = ["llama-index", "inflection"]
marqo = ["marqo"]
mcp = ["mcp"]
milvus = ["pymilvus"]
mistralai = ["mistralai"]
ollama = ["ollama"]
openai = ["openai"]
pinecone = ["pinecone-client"]
qdrant = ["qdrant-client"]
replicate = ["replicate"]
sagemaker = ["boto3"]
together = ["together"]
vertexai = ["google-cloud-aiplatform"]
voyageai = ["voyageai"]
watsonx = ["ibm-watson-machine-learning"]
weaviate = ["weaviate-client"]
writer = ["writer-sdk"]

# =============================================================================
# BUILD SYSTEM
# =============================================================================

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# TOOL CONFIGURATION
# =============================================================================

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
skip = ["src/fortifyroot/_vendor"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["src/fortifyroot/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["src/fortifyroot/_vendor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "vcr: tests using pytest-recording VCR cassettes",
    "default_cassette(name): override cassette path/name for a VCR test",
]
filterwarnings = [
    "ignore::DeprecationWarning:fortifyroot._vendor.*",
    "ignore::PendingDeprecationWarning:fortifyroot._vendor.*",
]

[tool.coverage.run]
branch = true
source = ["src/fortifyroot"]
omit = ["src/fortifyroot/_vendor/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
